--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-server.error.include-message = always
-server.error.include-binding-errors=always
+spring.profiles.active=local
+spring.main.banner-mode=off
+task.template.allowMultipleTasks=false
