--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -4,7 +4,7 @@ spring:
     path: '/console'
   datasource:
     url: 'jdbc:h2:file:./todo-db'
-  jpa.hibernate.ddl-auto: create-drop
+  jpa.hibernate.ddl-auto: validate
 server.error:
   include-message: always
   include-binding-errors: always
